// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dropdown /> Controlled 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root HvButton-root MuiButton-text HvButton-ghostSVG MuiButton-textPrimary HvButton-ghost"
    style="width: 125px;"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Click to 
      Open
    </span>
  </button>
  <div
    style="width: 32px;"
  >
    <div
      class="HvBaseDropdown-root HvDropDownMenu-root"
    >
      <div
        aria-expanded="false"
        aria-haspopup="menu"
        aria-label="dropdownMenu-1"
        class="HvDropDownMenu-container HvBaseDropdown-anchor"
        id="dropMenu"
        tabindex="-1"
      >
        <button
          aria-expanded="false"
          aria-label="Dropdown menu"
          class="MuiButtonBase-root MuiButton-root HvButton-root MuiButton-text HvDropDownMenu-icon HvButton-icon HvButton-ghostSVG MuiButton-textPrimary HvButton-ghost"
          id="dropMenu-icon-button"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <div
              class="HvIconBase-root HvIconBase-s"
              name="MoreOptionsVertical"
            >
              <svg
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="color0"
                  d="M7 6.9h2v2H7zM7 4h2V2H7zm0 10h2v-2H7z"
                  fill="#414141"
                />
              </svg>
            </div>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> Disabled 1`] = `
<div>
  <div
    style="width: 32px;"
  >
    <div
      class="HvBaseDropdown-root HvDropDownMenu-root"
    >
      <div
        aria-expanded="false"
        aria-haspopup="menu"
        aria-label="dropdownMenu-4"
        class="HvDropDownMenu-container HvBaseDropdown-anchor HvBaseDropdown-rootDisabled"
        id="dropMenu"
        tabindex="-1"
      >
        <button
          aria-expanded="false"
          aria-label="Dropdown menu"
          class="MuiButtonBase-root MuiButton-root HvButton-root MuiButton-text HvDropDownMenu-icon HvButton-icon HvButton-ghostSVG MuiButton-textPrimary HvButton-ghost Mui-disabled HvButton-ghostDisabled Mui-disabled"
          disabled=""
          id="dropMenu-icon-button"
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <div
              class="HvIconBase-root HvIconBase-s"
              name="MoreOptionsVertical"
            >
              <svg
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="color0"
                  d="M7 6.9h2v2H7zM7 4h2V2H7zm0 10h2v-2H7z"
                  fill="#999999"
                />
              </svg>
            </div>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Dropdown /> General 1`] = `
<div>
  <div
    style="width: 32px;"
  >
    <div
      class="HvBaseDropdown-root HvDropDownMenu-root"
    >
      <div
        aria-expanded="false"
        aria-haspopup="menu"
        class="HvDropDownMenu-container HvBaseDropdown-anchor"
        id="drop-down-menu-1"
        tabindex="-1"
      >
        <button
          aria-expanded="false"
          aria-label="Dropdown menu"
          class="MuiButtonBase-root MuiButton-root HvButton-root MuiButton-text HvDropDownMenu-icon HvButton-icon HvButton-ghostSVG MuiButton-textPrimary HvButton-ghost"
          id="drop-down-menu-1-icon-button"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <div
              class="HvIconBase-root HvIconBase-s"
              name="MoreOptionsVertical"
            >
              <svg
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="color0"
                  d="M7 6.9h2v2H7zM7 4h2V2H7zm0 10h2v-2H7z"
                  fill="#414141"
                />
              </svg>
            </div>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
